413/traffic-mirror/envoy/envoy.yaml
node:
  id: traffic-mirror-envoy
  cluster: traffic-mirror

admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filter_chain_match:
            transport_protocol: tls
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: false
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /etc/envoy/tls/server.crt
                    private_key:
                      filename: /etc/envoy/tls/server.key
                alpn_protocols: "h2,http/1.1"
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_https
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: all
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: production_service
                            timeout: 30s
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: traffic_mirror
                        vm_config:
                          vm_id: traffic_mirror_vm
                          runtime: envoy.wasm.runtime.v8
                          code:
                            local:
                              filename: /etc/envoy/wasm/traffic-mirror.wasm
                          configuration:
                            value: '{"sampling_rate": 0.1, "sampling_hash_key": "x-request-id", "test_cluster": "test_service", "control_plane": "control-plane:8080", "proto_content_types": ["application/grpc", "application/grpc+proto", "application/x-protobuf", "application/protobuf"], "color_enabled": false, "color_header": "x-traffic-color", "color_value": "mirrored", "anomaly_enabled": true, "anomaly_threshold": 0.0, "header_rules": []}'
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: all
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: production_service
                            timeout: 30s
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: traffic_mirror
                        vm_config:
                          vm_id: traffic_mirror_vm
                          runtime: envoy.wasm.runtime.v8
                          code:
                            local:
                              filename: /etc/envoy/wasm/traffic-mirror.wasm
                          configuration:
                            value: '{"sampling_rate": 0.1, "sampling_hash_key": "x-request-id", "test_cluster": "test_service", "control_plane": "control-plane:8080", "proto_content_types": ["application/grpc", "application/grpc+proto", "application/x-protobuf", "application/protobuf"], "color_enabled": false, "color_header": "x-traffic-color", "color_value": "mirrored", "anomaly_enabled": true, "anomaly_threshold": 0.0, "header_rules": []}'
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: production_service
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            validation_context:
              match_subject_alt_names:
                exact: "production-service"
              trusted_ca:
                filename: /etc/envoy/tls/ca.crt
      load_assignment:
        cluster_name: production_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: production-service
                      port_value: 8443

    - name: test_service
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            validation_context:
              match_subject_alt_names:
                exact: "test-service"
              trusted_ca:
                filename: /etc/envoy/tls/ca.crt
      load_assignment:
        cluster_name: test_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: test-service
                      port_value: 8443

tracing:
  http:
    name: envoy.tracers.opentelemetry
    typed_config:
      "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
      grpc_service:
        envoy_grpc:
          cluster_name: jaeger_collector
        timeout: 5s
      service_name: envoy-traffic-mirror

  clusters:
    - name: jaeger_collector
      connect_timeout: 5s
      type: STRICT_DNS
      typed_extension_protocol_options:
        "envoy.extensions.upstreams.http.v3.HttpProtocolOptions":
          "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions"
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: jaeger_collector
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: jaeger
                      port_value: 4317

telemetry:
  tracing:
    - providers:
        - name: envoy.tracers.opentelemetry
